--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,15 @@
 html {
-    font-size: 16px;
+  font-size: 12px;
 }
+
+body {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 1.2rem;
+  line-height: 1.2;
+  text-align: center;
+  background: #1f2937;
+  color: #f9faf8;
+  margin: 0;
+}
+
