--- a/styles.css
+++ b/styles.css
@@ -47,8 +47,47 @@ a:visited {
 }
 
 img {
-  max-width: 90%;
+  max-width: 100%;
   display: block;
   height: auto;
   margin: 0 auto;
+}
+
+#img-div {
+  background: hsl(215, 28%, 25%);
+  padding: 10px;
+  margin: 0;
+}
+
+#img-caption {
+  margin: 15px 0 5px 0;
+}
+
+@media (max-width: 400px) {
+  #img-caption {
+    font-size: 1.4rem;
+  }
+}
+
+#headline {
+  margin: 45px 0;
+  text-align: center;
+}
+
+ul {
+  max-width:500px;
+  margin: 0 auto 40px auto;
+  text-align: left;
+  line-height: 1.5;
+}
+
+li {
+  margin: 13px 0;
+}
+
+blockquote {
+  font-style: italic;
+  max-width: 520px;
+  margin: 0 auto 40px auto;
+  text-align: left;
 }
